--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://cvgellhorn@github.com/cvgellhorn/webpack-boilerplate.git"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "pixi.js": "^4.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
