--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "pixi.js": "^4.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "cross-env": "^5.1.1",
